--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ local.properties
 .loadpath
 .recommenders
 
+build/
+WebContent/WEB-INF/lib/
+
 # External tool builders
 .externalToolBuilders/
 
